gcc/testsuite/rust/rustc/ui/issues/issue-72076.rs
trait X {
    type S;
    fn f() -> Self::S {} // { dg-error ".E0308." "" { target *-*-* } }
}

fn main() {}

